fix: shorten all signalLabels to 3-5 words max across all articles

--- a/src/data/articles/macmini-ethereum-launch-986-percent-apple-meme.json
+++ b/src/data/articles/macmini-ethereum-launch-986-percent-apple-meme.json
@@ -4,11 +4,11 @@
   "articleType": "launch-radar",
   "category": "alpha",
   "heroImage": "/images/articles/macmini-ethereum-launch-986-percent-apple-meme.webp",
-  "headline": "$MACMINI Hits $179K Market Cap in Under 20 Hours \u2014 Apple's Iconic Hardware Gets the Meme Token Treatment on Ethereum",
-  "subheadline": "A brand-new Ethereum meme coin themed after Apple's compact powerhouse just posted a 986% gain with $69K in volume. Clean security audits, locked liquidity \u2014 but $40K in the pool means one big sell could end the party.",
+  "headline": "$MACMINI Hits $179K Market Cap in Under 20 Hours — Apple's Iconic Hardware Gets the Meme Token Treatment on Ethereum",
+  "subheadline": "A brand-new Ethereum meme coin themed after Apple's compact powerhouse just posted a 986% gain with $69K in volume. Clean security audits, locked liquidity — but $40K in the pool means one big sell could end the party.",
   "signalRating": "speculative",
-  "signalEmoji": "\ud83d\udfe1",
-  "signalLabel": "Speculative \u2014 100/100 security score, but $40K liquidity is a paper bridge",
+  "signalEmoji": "🟡",
+  "signalLabel": "100/100 Score, No Liquidity",
   "publishedAt": "2026-02-26T15:05:12+08:00",
   "author": "MemeDesk Editorial",
   "tags": [
@@ -31,14 +31,14 @@
   "body": [
     {
       "type": "paragraph",
-      "text": "Somewhere in the relentless churn of Ethereum's token factory, someone woke up and decided the Apple Mac mini deserved its own cryptocurrency. As of 7:00 AM UTC on February 26, $MACMINI has been live on Uniswap V2 for less than 20 hours \u2014 and it's already posted a 986% gain from its initial price, with a $179K fully diluted valuation built on $69K in total volume."
+      "text": "Somewhere in the relentless churn of Ethereum's token factory, someone woke up and decided the Apple Mac mini deserved its own cryptocurrency. As of 7:00 AM UTC on February 26, $MACMINI has been live on Uniswap V2 for less than 20 hours — and it's already posted a 986% gain from its initial price, with a $179K fully diluted valuation built on $69K in total volume."
     },
     {
       "type": "quickTake",
       "bullets": [
-        "$MACMINI launched on Ethereum via Uniswap V2 less than 20 hours ago \u2014 now sitting at $179K FDV with 1,069 transactions",
+        "$MACMINI launched on Ethereum via Uniswap V2 less than 20 hours ago — now sitting at $179K FDV with 1,069 transactions",
         "Buy-sell ratio skews heavily bullish: 625 buys vs 444 sells, $41K buy volume vs $28K sell volume across 128 unique buyers",
-        "Token Sniffer scores 100/100 and liquidity is locked via UNCX \u2014 but total pool depth is just $40K, making this a high-risk micro-cap play"
+        "Token Sniffer scores 100/100 and liquidity is locked via UNCX — but total pool depth is just $40K, making this a high-risk micro-cap play"
       ]
     },
     {
@@ -47,15 +47,15 @@
     },
     {
       "type": "paragraph",
-      "text": "The meme premise is straightforward: Apple's Mac mini, the compact desktop that punches above its weight class, reimagined as a crypto ecosystem metaphor. \"Small form. Big vision\" \u2014 that's the tagline. The project positions itself as a token \"built for creators and innovators,\" borrowing Apple's design philosophy as narrative scaffolding for a meme coin."
+      "text": "The meme premise is straightforward: Apple's Mac mini, the compact desktop that punches above its weight class, reimagined as a crypto ecosystem metaphor. \"Small form. Big vision\" — that's the tagline. The project positions itself as a token \"built for creators and innovators,\" borrowing Apple's design philosophy as narrative scaffolding for a meme coin."
     },
     {
       "type": "paragraph",
-      "text": "What separates $MACMINI from the ocean of product-themed meme tokens that die within hours is the infrastructure. The team deployed a website at macmini.blog, set up a Telegram community, and launched an X account at @Macminimeme. That doesn't guarantee survival \u2014 plenty of well-packaged tokens crater \u2014 but it shows a level of effort that puts it above zero-effort pump-and-dumps."
+      "text": "What separates $MACMINI from the ocean of product-themed meme tokens that die within hours is the infrastructure. The team deployed a website at macmini.blog, set up a Telegram community, and launched an X account at @Macminimeme. That doesn't guarantee survival — plenty of well-packaged tokens crater — but it shows a level of effort that puts it above zero-effort pump-and-dumps."
     },
     {
       "type": "paragraph",
-      "text": "The real differentiator is the security profile. Token Sniffer gives it a perfect 100/100 score. Go+ Security and Quick Intel both flag zero issues. Liquidity is locked through UNCX Network \u2014 verifiable on-chain. In a market where most new Ethereum meme launches don't survive their first 24 hours, a clean audit sheet is the minimum bar for serious attention."
+      "text": "The real differentiator is the security profile. Token Sniffer gives it a perfect 100/100 score. Go+ Security and Quick Intel both flag zero issues. Liquidity is locked through UNCX Network — verifiable on-chain. In a market where most new Ethereum meme launches don't survive their first 24 hours, a clean audit sheet is the minimum bar for serious attention."
     },
     {
       "type": "heading",
@@ -63,15 +63,15 @@
     },
     {
       "type": "paragraph",
-      "text": "Let's break down what 20 hours of trading looks like for $MACMINI. Price per token sits at $0.0124, giving a fully diluted valuation of $179K. Total volume has hit $69K \u2014 modest by meme coin standards, but notable for a micro-cap that hasn't been called by any major KOL yet."
+      "text": "Let's break down what 20 hours of trading looks like for $MACMINI. Price per token sits at $0.0124, giving a fully diluted valuation of $179K. Total volume has hit $69K — modest by meme coin standards, but notable for a micro-cap that hasn't been called by any major KOL yet."
     },
     {
       "type": "paragraph",
-      "text": "The buy-sell dynamics tell the more interesting story. Out of 1,069 total transactions, 625 are buys and 444 are sells. That's a 1.4:1 buy-to-sell ratio. More tellingly, buy volume ($41K) outpaces sell volume ($28K) by nearly 50%. The maker count shows 128 unique buyers versus just 50 unique sellers \u2014 meaning most buyers are holding rather than flipping."
+      "text": "The buy-sell dynamics tell the more interesting story. Out of 1,069 total transactions, 625 are buys and 444 are sells. That's a 1.4:1 buy-to-sell ratio. More tellingly, buy volume ($41K) outpaces sell volume ($28K) by nearly 50%. The maker count shows 128 unique buyers versus just 50 unique sellers — meaning most buyers are holding rather than flipping."
     },
     {
       "type": "paragraph",
-      "text": "The Uniswap V2 pool holds approximately 46.96 quadrillion MACMINI tokens and 9.70 WETH, valued at roughly $20K per side for $40K total liquidity. That's the number that should sober up anyone who's getting excited about the 986% gain. Thin liquidity means price discovery is violent in both directions \u2014 and a single 5 ETH sell order would crater the chart."
+      "text": "The Uniswap V2 pool holds approximately 46.96 quadrillion MACMINI tokens and 9.70 WETH, valued at roughly $20K per side for $40K total liquidity. That's the number that should sober up anyone who's getting excited about the 986% gain. Thin liquidity means price discovery is violent in both directions — and a single 5 ETH sell order would crater the chart."
     },
     {
       "type": "heading",
@@ -80,12 +80,12 @@
     {
       "type": "redFlags",
       "flags": [
-        "Liquidity is locked via UNCX \u2705 \u2014 verifiable on-chain",
-        "Token Sniffer: 100/100, Go+ Security: No issues, Quick Intel: No issues \u2705",
-        "Total pool liquidity is only $40K \u26a0\ufe0f \u2014 extremely thin, high slippage risk",
-        "No doxxed team \u2014 anonymous dev, standard for meme tokens but still a risk",
-        "No major KOL endorsements yet \u2014 organic growth only so far",
-        "Brand parody (Apple) could attract unwanted legal attention if it gains traction \u26a0\ufe0f"
+        "Liquidity is locked via UNCX ✅ — verifiable on-chain",
+        "Token Sniffer: 100/100, Go+ Security: No issues, Quick Intel: No issues ✅",
+        "Total pool liquidity is only $40K ⚠️ — extremely thin, high slippage risk",
+        "No doxxed team — anonymous dev, standard for meme tokens but still a risk",
+        "No major KOL endorsements yet — organic growth only so far",
+        "Brand parody (Apple) could attract unwanted legal attention if it gains traction ⚠️"
       ]
     },
     {
@@ -94,11 +94,11 @@
     },
     {
       "type": "paragraph",
-      "text": "As of this writing, no notable KOLs or tracked smart money wallets have publicly positioned in $MACMINI. The 128 unique buyers appear to be a mix of micro-cap hunters and DexScreener snipers who spotted the volume surge on the new pairs tracker. The token showed up on DexScreener's trending page for new Ethereum pairs \u2014 which is likely the primary discovery vector driving the current inflow."
+      "text": "As of this writing, no notable KOLs or tracked smart money wallets have publicly positioned in $MACMINI. The 128 unique buyers appear to be a mix of micro-cap hunters and DexScreener snipers who spotted the volume surge on the new pairs tracker. The token showed up on DexScreener's trending page for new Ethereum pairs — which is likely the primary discovery vector driving the current inflow."
     },
     {
       "type": "paragraph",
-      "text": "The absence of KOL involvement is a double-edged sword. On one hand, there's no coordinated shill campaign artificially inflating the price. On the other, meme coins on Ethereum need fuel to sustain momentum, and that fuel usually comes from social amplification. Without a viral catalyst, the current trajectory relies entirely on organic DexScreener discovery \u2014 which tends to fade after 24-48 hours."
+      "text": "The absence of KOL involvement is a double-edged sword. On one hand, there's no coordinated shill campaign artificially inflating the price. On the other, meme coins on Ethereum need fuel to sustain momentum, and that fuel usually comes from social amplification. Without a viral catalyst, the current trajectory relies entirely on organic DexScreener discovery — which tends to fade after 24-48 hours."
     },
     {
       "type": "heading",
@@ -106,7 +106,7 @@
     },
     {
       "type": "paragraph",
-      "text": "Apple-themed meme coins are not new. Various iterations have launched and died across Solana and Ethereum over the past year. The brand association alone isn't enough to sustain a community \u2014 eventually, the meme needs to evolve beyond \"it's named after a product.\" With $40K in liquidity, $MACMINI is one whale sell away from a 50%+ drawdown. The 986% gain looks impressive on the chart, but it's built on a micro-cap foundation where a few thousand dollars moves the needle."
+      "text": "Apple-themed meme coins are not new. Various iterations have launched and died across Solana and Ethereum over the past year. The brand association alone isn't enough to sustain a community — eventually, the meme needs to evolve beyond \"it's named after a product.\" With $40K in liquidity, $MACMINI is one whale sell away from a 50%+ drawdown. The 986% gain looks impressive on the chart, but it's built on a micro-cap foundation where a few thousand dollars moves the needle."
     },
     {
       "type": "paragraph",
@@ -118,11 +118,11 @@
     },
     {
       "type": "paragraph",
-      "text": "\ud83d\udfe1 Speculative. $MACMINI checks the basic hygiene boxes \u2014 locked liquidity, clean security audits, and a functioning social presence \u2014 which already puts it ahead of 90% of new Ethereum meme launches. The buy-sell ratio suggests genuine accumulation rather than bot-driven wash trading."
+      "text": "🟡 Speculative. $MACMINI checks the basic hygiene boxes — locked liquidity, clean security audits, and a functioning social presence — which already puts it ahead of 90% of new Ethereum meme launches. The buy-sell ratio suggests genuine accumulation rather than bot-driven wash trading."
     },
     {
       "type": "paragraph",
-      "text": "But the $40K liquidity pool is the hard constraint. This is a micro-cap that could 5x or go to zero within the next 24 hours based on a single trade. The Apple brand hook is clever but not deep enough to build lasting community without additional catalysts. Watch for KOL pickups or a liquidity injection \u2014 either would change the risk profile significantly. Without them, this is a 20-hour-old experiment on a thin pool, and the clock is ticking."
+      "text": "But the $40K liquidity pool is the hard constraint. This is a micro-cap that could 5x or go to zero within the next 24 hours based on a single trade. The Apple brand hook is clever but not deep enough to build lasting community without additional catalysts. Watch for KOL pickups or a liquidity injection — either would change the risk profile significantly. Without them, this is a 20-hour-old experiment on a thin pool, and the clock is ticking."
     },
     {
       "type": "paragraph",
